# MultiClass_Attention_Unet

./: .gitignore  README.md  job.sh  main.py  pyproject.toml  requirements.txt  test.py
main/: job.sh  job_ddp.sh  logs_318485.err  logs_318485.out
main/logs/: logs_238550.err  logs_238550.out  logs_239339.err  logs_239339.out  logs_239355.err  logs_239355.out  logs_239363.out  logs_239400.err  logs_239400.out  logs_318796.err  logs_318796.out  logs_318868.err  logs_318868.out  logs_318884.err  logs_318884.out  logs_318897.err  logs_318897.out
